[package]
name = "trs"
version = "0.1.0"
authors = ["Pearce Keesling <pearce.keesling@lifeomic.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.6.3"
miniserde = "0.1.13"
anyhow = "1.0.32"
surf = "1.0.3"
