[package]
name = "trs"
version = "0.1.0"
authors = ["Pearce Keesling <pearce.keesling@lifeomic.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.6.3", features = ['attributes'] }
anyhow = "1.0.32"
surf = "1.0.3"
tui = { version = "0.10.0", default-features = false, features = ['termion'] }
termion = "1.5.5"
serde = "1.0.115"
serde_json = "1.0.57"
